--- a/microsite/_includes/_main.html
+++ b/microsite/_includes/_main.html
@@ -2,9 +2,19 @@
     <div class="wrapper">
         <div class="main-flex">
             <div class="main-item">
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="../img/feature-image-1.svg" alt="">
+                <h2>Compile</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+            </div>
+            <div class="main-item">
+                <img src="../img/feature-image-2.svg" alt="">
+                <h2>Verification</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+            </div>
+            <div class="main-item">
+                <img src="../img/feature-image-3.svg" alt="">
+                <h2>Generation</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
             </div>
         </div>
     </div>
