--- a/microsite/_includes/_footer.html
+++ b/microsite/_includes/_footer.html
@@ -1,9 +1,14 @@
 <div id="site-footer">
     <div class="wrapper">
         <div class="footer-flex">
-            <div class="footer-dev"></div>
+            <div class="footer-dev">
+                <p>Nef is designed and developed by <a href="#">Nef</a> 
+with support from <a href="#">47 Degrees</a></p>
+            </div>
             <ul class="footer-menu">
-                <li class="footer-menu-item"></li>
+                <li class="footer-menu-item"><a href="#">Documentation</a></li>
+                <li class="footer-menu-item"><a href="#">GitHub</a></li>
+                <li class="footer-menu-item"><a href="#">License</a></li>
             </ul>
         </div>
     </div>
