Load JS script deferred

--- a/microsite/_includes/_head.html
+++ b/microsite/_includes/_head.html
@@ -18,9 +18,9 @@
     <meta name="twitter:site" content="@arrow_kt">
     <meta name="twitter:creator" content="@arrow_kt">
     <meta name="twitter:image" content="" />
-    
-    <script src="{{ '/js/functions.js' | relative_url }}"></script>
-    
+
+    <script defer src="{{ '/js/functions.js' | relative_url }}"></script>
+
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ '/img/favicon.png' | relative_url }}">
 
