--- a/microsite/_sass/components/_nav.scss
+++ b/microsite/_sass/components/_nav.scss
@@ -5,11 +5,11 @@
     position: fixed;
     padding: ($base-point-grid * 5) 0;
     width: 100%;
-    //background: darken($brand-secondary, 5%);
+    transition: all $base-duration $base-timing;
     
     &.nav-scroll {
     padding: ($base-point-grid * 2) 0;
-    background: $brand-primary;
+    background: rgba($gray-primary, 0.9);
   }
 
     .nav-flex {
