--- a/microsite/_includes/_footer.html
+++ b/microsite/_includes/_footer.html
@@ -2,13 +2,13 @@
     <div class="wrapper">
         <div class="footer-flex">
             <div class="footer-dev">
-                <p>Nef is designed and developed by <a href="#">Nef</a> 
+                <p>Nef is designed and developed by <a href="#">{{ site.name }}</a> 
 with support from <a href="#">47 Degrees</a></p>
             </div>
             <ul class="footer-menu">
-                <li class="footer-menu-item"><a href="#">Documentation</a></li>
-                <li class="footer-menu-item"><a href="#">GitHub</a></li>
-                <li class="footer-menu-item"><a href="#">License</a></li>
+                {% for item in site.data.menu.nav %}
+                    <li class="footer-menu-item"><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
+                {% endfor %}
             </ul>
         </div>
     </div>
