--- a/microsite/_includes/_main.html
+++ b/microsite/_includes/_main.html
@@ -1,21 +1,13 @@
 <div id="site-main">
     <div class="wrapper">
         <div class="main-flex">
+           {% for item in site.data.features.content %}
             <div class="main-item">
-                <img src="../img/feature-image-1.svg" alt="">
-                <h2>Compile</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                <img src="{{ item.icon }}" alt="{{ item.title }}">
+                <h2>{{ item.title }}</h2>
+                <p>{{ item.description }}</p>
             </div>
-            <div class="main-item">
-                <img src="../img/feature-image-2.svg" alt="">
-                <h2>Verification</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-            </div>
-            <div class="main-item">
-                <img src="../img/feature-image-3.svg" alt="">
-                <h2>Generation</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
