--- a/microsite/_sass/components/_sidebar.scss
+++ b/microsite/_sass/components/_sidebar.scss
@@ -1,3 +1,70 @@
 // Sidebar
 // -----------------------------------------------
 // -----------------------------------------------
+
+#site-sidebar {
+    position: fixed;
+    background: $brand-secondary;
+    width: 304px;
+    height: 100%;
+
+    .sidebar-brand {
+        padding: ($base-point-grid * 2);
+        background: rgba($brand-primary, 0.30);
+
+        a {
+            display: flex;
+            align-items: center;
+            color: $white;
+
+            &:visited,
+            &:hover,
+            &:active {
+                color: $white;
+                text-decoration: none;
+            }
+
+            img {}
+
+            span {
+                font-size: 2.143rem;
+            }
+        }
+    }
+
+    .sidebar-menu {
+        margin-top: ($base-point-grid * 2);
+        .sidebar-menu-item {
+            a {
+                display: block;
+                padding: ($base-point-grid * 2) ($base-point-grid * 3);
+                color: $white;
+                transition: background $base-duration $base-timing;
+
+                &:visited {
+                    color: $white;
+                }
+
+                &:hover {
+                    background: rgba($brand-primary, 0.15);
+                    color: $white;
+                    text-decoration: none;
+                }
+
+                &:active {
+                    color: $white;
+                }
+            }
+            
+            &.active {
+                    a {
+                        padding-left: (($base-point-grid * 3) - 3);
+                        background: rgba($brand-primary, 0.30);
+                        border-left: 3px solid $brand-tertiary;
+                        pointer-events: none;
+                    }
+
+                }
+        }
+    }
+}
