--- a/microsite/css/styles.scss
+++ b/microsite/css/styles.scss
@@ -16,3 +16,5 @@
 @import "components/header";
 @import "components/main";
 @import "components/footer";
+@import "components/sidebar";
+@import "components/doc";
