--- a/microsite/_sass/components/_doc.scss
+++ b/microsite/_sass/components/_doc.scss
@@ -1,7 +1,7 @@
-// Doc wrapper
+// Doc content
 // -----------------------------------------------
 // -----------------------------------------------
-#doc-wrapper {
-    margin-left: ($base-point-grid * 32);
-    @extend .w3-main;
+#site-doc {
+    padding: ($base-point-grid * 3);
+    margin-left: 304px;
 }
