--- a/microsite/_sass/components/_doc.scss
+++ b/microsite/_sass/components/_doc.scss
@@ -4,4 +4,49 @@
 #site-doc {
     padding: ($base-point-grid * 3);
     margin-left: 304px;
+    
+    h1 {
+        font-size: 2.5rem;
+        border-bottom: 1px solid $border-color;
+    }
+    h2 {
+        font-size:  2rem;
+        border-bottom: 1px solid $border-color;
+    }
+    h3 {
+        font-size: 1.5rem;
+    }
+    h4 {
+        font-size: 1.25rem;
+    }
+    h5 {
+        font-size: 1.125rem;
+    }
+    h6 {
+        font-size: 1rem;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        margin: {
+            top: ($base-point-grid * 3);
+            bottom: ($base-point-grid * 2);
+        }
+    }
+    
+    p {
+        margin: ($base-point-grid * 2) 0;
+    }
+    
+    ul {
+        padding-left: 20px;
+        margin-bottom: ($base-point-grid * 2);
+        li {
+            list-style: disc;
+        }
+    }
 }
