--- a/microsite/_sass/components/_code.scss
+++ b/microsite/_sass/components/_code.scss
@@ -1,3 +1,43 @@
 // Code 
-// -----------------------------------------------
-// -----------------------------------------------
+// ----------------------------------------------
+// ----------------------------------------------
+p code,
+ul code {
+    padding: 2px $base-point-grid;
+    background: rgba($gray-primary, 0.1);
+    font-family: $code-font-family;
+    border-radius: 2px;
+}
+
+code {
+    margin-bottom: ($base-point-grid * 2);
+    font-family: $code-font-family;
+
+    &.hljs {
+        padding: ($base-point-grid * 3);
+        background: $brand-secondary;
+        color: rgba($white, 0.9);
+
+        .hljs-keyword,
+        .hljs-selector-tag,
+        .hljs-deletion {
+            color: $brand-primary;
+        }
+
+        .hljs-attr,
+        .hljs-variable,
+        .hljs-template-variable,
+        .hljs-type,
+        .hljs-selector-class,
+        .hljs-selector-attr,
+        .hljs-selector-pseudo,
+        .hljs-number {
+            color: $brand-secondary;
+        }
+
+        .hljs-built_in,
+        .hljs-class .hljs-title {
+            color: rgba($brand-tertiary, 0.8);
+        }
+    }
+}
