--- a/microsite/_sass/utils/_variables.scss
+++ b/microsite/_sass/utils/_variables.scss
@@ -4,7 +4,7 @@
 
 // Google Fonts
 // -----------------------------------------------
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Source+Code+Pro&display=swap');
 
 // Colors
 // -----------------------------------------------
