--- a/microsite/css/styles.scss
+++ b/microsite/css/styles.scss
@@ -1,6 +1,9 @@
 ---
 ---
 
+// Vendor
+@import "vendors/highlight/atom-one-dark";
+
 // Utils
 @import "utils/variables";
 @import "utils/mixins";
@@ -18,3 +21,4 @@
 @import "components/footer";
 @import "components/sidebar";
 @import "components/doc";
+@import "components/code";
