doc layout responsive

--- a/microsite/_includes/_doc.html
+++ b/microsite/_includes/_doc.html
@@ -1,3 +1,7 @@
 <main id="site-doc">
+        <div>
+           <a class="sidebar-icon-open" href="#" onclick="w3_open()">
+            <img src="../../img/sidebar-icon-open.svg" alt="">
+        </a></div>
     {{content}}
 </main>
