--- a/microsite/_includes/_sidebar.html
+++ b/microsite/_includes/_sidebar.html
@@ -1,10 +1,9 @@
 <div id="site-sidebar">
     <div class="sidebar-brand">
         <a href="#">
-            <img src="../../img/navbar-brand.svg" alt="">
+            <img src="../../img/nav-brand.svg" alt="">
             <span>{{ site.name }}</span>
         </a>
-        
     </div>
     <ul class="sidebar-menu">
          {% for item in site.data.sidebar.options %}
