--- a/microsite/_sass/components/_doc.scss
+++ b/microsite/_sass/components/_doc.scss
@@ -50,3 +50,15 @@
         }
     }
 }
+
+// Responsive
+// -----------------------------------------------
+@include bp(medium) {
+    #site-doc {
+        margin-left: 0;
+    }
+}
+
+
+
+
