--- a/microsite/_includes/_nav.html
+++ b/microsite/_includes/_nav.html
@@ -2,16 +2,23 @@
     <div class="wrapper">
         <div class="nav-flex">
             <a class="nav-brand" href="#">
-                <img src="../img/navbar-brand.svg" alt="">
+                <img src="../img/nav-brand.svg" alt="">
                 <span>{{ site.name }}</span>
             </a>
             <ul class="nav-menu">
+               <li class="nav-icon-close">
+                   <a href="#"><img src="../img/nav-icon-close.svg" alt=""></a>
+               </li>
                 {% for item in site.data.menu.nav%}
                 <li class="nav-menu-item">
                     <a href="{{ item.url }}" alt="{{ item.title }}">{{ item.title }}</a>
                 </li>
                {% endfor %}
             </ul>
+            
+            <a class="nav-icon-open" href="#">
+                <img src="../img/nav-icon-open.svg" alt="">
+            </a>
         </div>
     </div>
 </nav>
