--- a/microsite/_sass/utils/_variables.scss
+++ b/microsite/_sass/utils/_variables.scss
@@ -4,7 +4,7 @@
 
 // Google Fonts
 // -----------------------------------------------
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Source+Code+Pro&display=optional');
 
 // Colors
 // -----------------------------------------------
@@ -42,7 +42,7 @@ $base-timing: ease;
 // Breakpoint
 // -----------------------------------------------
 $bp-small: 480px;
-$bp-medium: 768px; 
+$bp-medium: 768px;
 $bp-large: 992px;
 $bp-xlarge: 1140px;
 
