--- a/microsite/_includes/_head-docs.html
+++ b/microsite/_includes/_head-docs.html
@@ -19,11 +19,11 @@
     <meta name="twitter:creator" content="@bow_swift">
     <meta name="twitter:image" content="" />
 
-    <script defer src="{{ '/js/functions.js' | relative_url }}"></script>
+    <script defer src="{{ '/js/docs.js' | relative_url }}"></script>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ '/img/favicon.png' | relative_url }}">
 
-    <!-- Nef main css -->
-    <link rel="stylesheet" type="text/css" href="{{ '/css/styles.css' | relative_url }}">
+    <!-- Nef docs css -->
+    <link rel="stylesheet" type="text/css" href="{{ '/css/docs.css' | relative_url }}">
 </head>
