--- a/microsite/_includes/_sidebar.html
+++ b/microsite/_includes/_sidebar.html
@@ -1,7 +1,7 @@
 <div id="site-sidebar">
     <div class="sidebar-brand">
-        <a href="#">
-            <img src="../../img/nav-brand.svg" alt="">
+        <a href="{{ site.baseurl }}/">
+            <img src="{{ site.baseurl }}/img/nav-brand.svg" alt="">
             <span>{{ site.name }}</span>
         </a>
     </div>
