--- a/microsite/_layouts/docs.html
+++ b/microsite/_layouts/docs.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    {% include _head.html %}
+    {% include _head-docs.html %}
     <body>
         {% include _sidebar.html %}
         {% include _doc.html %}
