--- a/microsite/_sass/utils/_variables.scss
+++ b/microsite/_sass/utils/_variables.scss
@@ -36,8 +36,8 @@ $base-line-height: 1.6;
 $base-point-grid: 8px;
 // Animation
 // -----------------------------------------------
-$base-duration: 350ms;
-$base-timing: ease;
+$base-duration: 250ms;
+$base-timing: ease-in-out;
 
 // Breakpoint
 // -----------------------------------------------
