--- a/microsite/_includes/_doc.html
+++ b/microsite/_includes/_doc.html
@@ -1,7 +1,10 @@
 <main id="site-doc">
-        <div>
-           <a class="sidebar-icon-open" href="#" onclick="w3_open()">
-            <img src="../../img/sidebar-icon-open.svg" alt="">
-        </a></div>
-    {{content}}
+    <div class="doc-header">
+      <button type="button" id="main-toggle" class="button sidebar-toggle">
+          <img src="{{ site.baseurl }}/img/sidebar-icon-open.svg" alt="">
+      </button>
+    </div>
+    <div class="doc-content">
+        {{ content }}
+    </div>
 </main>
