--- a/microsite/_includes/_footer.html
+++ b/microsite/_includes/_footer.html
@@ -2,8 +2,8 @@
     <div class="wrapper">
         <div class="footer-flex">
             <div class="footer-dev">
-                <p>Nef is designed and developed by <a href="#">{{ site.name }}</a> 
-with support from <a href="#">47 Degrees</a></p>
+                <p>Nef is designed and developed by <a href="https://github.com/bow-swift/nef">{{ site.name }}</a>
+                  with support from <a href="https://www.47deg.com/">47 Degrees</a></p>
             </div>
             <ul class="footer-menu">
                 {% for item in site.data.menu.nav %}
