--- a/microsite/css/docs.scss
+++ b/microsite/css/docs.scss
@@ -1,6 +1,9 @@
 ---
 ---
 
+// Vendor
+@import "vendors/highlight/atom-one-dark";
+
 // Utils
 @import "utils/variables";
 @import "utils/mixins";
@@ -13,7 +16,7 @@
 
 // Components
 @import "components/button";
-@import "components/nav";
-@import "components/header";
-@import "components/main";
 @import "components/footer";
+@import "components/sidebar";
+@import "components/doc";
+@import "components/code";
