--- a/microsite/_includes/_footer.html
+++ b/microsite/_includes/_footer.html
@@ -7,7 +7,11 @@
             </div>
             <ul class="footer-menu">
                 {% for item in site.data.menu.nav %}
-                    <li class="footer-menu-item"><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
+                    <li class="footer-menu-item">
+                      <a href="{{ site.baseurl }}{{ item.url }}" title="{{ item.title }}">
+                        {{ item.title }}
+                      </a>
+                    </li>
                 {% endfor %}
             </ul>
         </div>
