--- a/microsite/_sass/components/_button.scss
+++ b/microsite/_sass/components/_button.scss
@@ -6,8 +6,8 @@
   background: none;
   border: none;
   outline: none;
-  padding: 0;
   text-decoration: none;
+  position: relative;
 
   &:hover {
     cursor: pointer;
@@ -15,5 +15,33 @@
 
   > img {
     vertical-align: bottom;
+  }
+}
+
+
+.close {
+  height: 28px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 32px;
+
+  &::before,
+  &::after {
+    background-color: #fff;
+    content: " ";
+    height: 100%;
+    left: 98%;
+    position: absolute;
+    top: 50%;
+    width: 2px;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    transform: rotate(-45deg);
   }
 }
