--- a/docs/_includes/_head.html
+++ b/docs/_includes/_head.html
@@ -19,7 +19,7 @@
     <meta name="twitter:creator" content="@bow_swift">
     <meta name="twitter:image" content="" />
 
-    <script defer src="{{ '/js/functions.js' | relative_url }}"></script>
+    <script defer src="{{ '/js/main.js' | relative_url }}"></script>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ '/img/favicon.png' | relative_url }}">
