--- a/docs/_includes/_footer.html
+++ b/docs/_includes/_footer.html
@@ -2,7 +2,7 @@
     <div class="wrapper">
         <div class="footer-flex">
             <div class="footer-dev">
-                <p>Nef is designed and developed by <a href="https://github.com/bow-swift/nef">{{ site.name }}</a>
+                <p>nef is designed and developed by <a href="https://github.com/bow-swift/nef">{{ site.name }}</a>
                   with support from <a href="https://www.47deg.com/">47 Degrees</a></p>
             </div>
             <ul class="footer-menu">
