--- a/docs/_includes/_header.html
+++ b/docs/_includes/_header.html
@@ -2,7 +2,7 @@
     <div class="wrapper">
         <div class="header-flex">
             <div class="header-text">
-                <h1>Compile time verification and generation <span>of documentation from <strong>Swift Playgrounds</strong></span></h1>
+                <h1>Compile time verification and generation <span>of documentation from <strong>Xcode Playgrounds</strong></span></h1>
                 <a class="header-button" href="{{ site.baseurl }}/docs/" title="Docs">Learn more</a>
             </div>
             <div class="header-image">
